--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,28 @@
 {
-    "env": {
-        "es2020": true,
-        "node": true
-    },
-    "extends": [
-        "airbnb-base",
-        /*"plugin:@typescript-eslint/recommended",*/
-        "prettier/@typescript-eslint",
-        "plugin:prettier/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": 11,
-        "sourceType": "module"
-    },
-    "plugins": [
-        /*"@typescript-eslint",*/
-        "prettier"
-    ],
-    "rules": {
-        "prettier/prettier": "error",
+  "env": {
+    "es2020": true,
+    "node": true
+  },
+  "extends": [
+    "airbnb-base",
+    /*"plugin:@typescript-eslint/recommended",*/
+    "prettier/@typescript-eslint",
+    "plugin:prettier/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 11,
+    "sourceType": "module"
+  },
+  "plugins": [
+    /*"@typescript-eslint",*/
+    "prettier"
+  ],
+  "rules": {
+    "camelcase": "off",
+    "prettier/prettier": "error",
+    "class-methods-use-this": "off",
+    "no-unused-vars": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
@@ -27,10 +30,10 @@
         "ts": "never"
       }
     ]
-    },
-    "settings": {
-      "import/resolver": {
-        "typescript": {}
-      }
+  },
+  "settings": {
+    "import/resolver": {
+      "typescript": {}
     }
+  }
 }
